add component tab feature and fix endpoint switch bugs
